--- a/debt_settler/src/App.css
+++ b/debt_settler/src/App.css
@@ -7,15 +7,29 @@
     font-style: public-sans;
 }
 
+@media (min-width: 1024px) {
+    .bg-card {
+        background-color: #FCF4E7 !important;
+        border: 3px solid #000000 !important;
+        box-shadow: 5px 5px 0px #000000 !important;
+        display: inline-block;
+        width: 25% !important;
+        font-style: public-sans;
+    }
+}
+
 .bg-card {
     background-color: #FCF4E7 !important;
     border: 3px solid #000000 !important;
     box-shadow: 5px 5px 0px #000000 !important;
-    display: block;
+    display: inline-block;
     font-style: public-sans;
 }
 
 .bg-cardHeader {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     background-color: #FCF4E7 !important;
     border: 3px solid #000000 !important;
     font-style: public-sans;
@@ -35,11 +49,15 @@
 }
 
 .bg-button {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     background-color: #FCF4E7 !important;
     border: 3px solid #000000 !important;
     font-style: public-sans;
     box-shadow: 5px 5px 0px #000000 !important;
     font-style: public-sans;
+    width: clamp(200px, 50%, 200px);
 }
 
 .bg-buttonDanger {
